--- a/style.css
+++ b/style.css
@@ -12,6 +12,26 @@ body {
   position: relative;
 }
 
+.bg_img {
+  position: absolute;
+  opacity: 0.3;
+  z-index: -1;
+}
+
+.bg_img_button {
+  height: 20vh;
+  top: 0;
+  right: 60%;
+  animation: slideDown 30s linear infinite;
+}
+
+.bg_img_dots {
+  height: 50vh;
+  top: 0;
+  left: 70%;
+  animation: rotate 60s linear infinite;
+}
+
 .header{
     width: 100vw;
 }
@@ -19,7 +39,6 @@ body {
     display: flex;
     justify-content: space-around;
     margin: 0;
-
 }
 
 #nav-menu h1 {
@@ -28,9 +47,14 @@ body {
     margin: 0;
 }
 
+
 .nav-border {
   border-bottom: 5px solid rgb(10, 10, 10);
-  border-radius: 1rem;
+  border-left: 5px solid rgb(10, 10, 10);
+  border-right: 5px solid rgb(10, 10, 10);
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  opacity: 0.5;
 }
 
 main {
@@ -39,10 +63,6 @@ main {
   margin: 0.5rem;
 }
 
-
-.hidden {
-  display: none;
-}
 
 
 /* ---------------------to_do----------------- */
@@ -123,7 +143,7 @@ main {
 
 .single-task {
   display: grid;
-  grid-template-columns: 1fr 80px 80px;
+  grid-template-columns: 1fr 80px 100px;
   column-gap: 0.5rem;
   margin: 0.5rem;
   border-bottom: 1px solid black;
@@ -132,7 +152,7 @@ main {
 
 .single-task-header {
   display: grid;
-  grid-template-columns: 1fr 80px 80px;
+  grid-template-columns: 1fr 80px 100px;
   width: 100%;
   column-gap: 0.5rem;
   text-align: center;
@@ -176,6 +196,7 @@ padding: 0;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  min-width: 30px;
 
 }
 
@@ -209,6 +230,11 @@ padding: 0;
     font-weight: 700;
     width: 30%;
     height: 1rem;
+  }
+
+  #shopFilterBtn {
+    color: rgb(0, 247, 255);
+    
   }
 
   .single-item > :first-child::before {
@@ -245,8 +271,41 @@ padding: 0;
     border-radius: 1rem;
     position: absolute;
     width: 200px;
-    height: 200px;
+    min-height: 200px;
     top: 100px;
     right: 100px;
+    padding: 1rem;
     color: white;
   }
+
+  #shop-filter > h5 {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    text-align: center
+  }
+
+  #shop-filter .btn {
+    padding: 0.2rem;
+    margin-top: 2rem;
+  }
+
+  #filter-buttons {
+    display: flex;
+    justify-content: space-around;
+  }
+
+
+  
+.hidden {
+  display: none;
+}
+
+@keyframes slideDown {
+  from {transform: translateY(-20vh)}
+  to {transform: translateY(100vh);}
+}
+
+@keyframes rotate {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
