--- a/style.css
+++ b/style.css
@@ -45,6 +45,15 @@ body {
 .header{
     width: 100vw;
 }
+
+.movableheader {
+  height: 20px;
+  color: white;
+  background: rgba(0, 0, 0, 0.50);
+  text-align: center;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
 #nav-menu {
     display: flex;
     justify-content: space-around;
@@ -285,12 +294,12 @@ padding: 0;
     min-height: 200px;
     top: 100px;
     right: 100px;
-    padding: 1rem;
+    padding: 0;
     color: white;
   }
 
   #shop-filter > h5 {
-    margin-top: 0;
+    margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     text-align: center
   }
