--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ html {
 
 .movableheader {
     height: 20px;
+    width: auto;
     color: white;
     background: rgba(0, 0, 0, 0.5);
     text-align: center;
@@ -70,7 +71,7 @@ html {
 }
 
 .nav-border {
-    background: rgb(146, 0, 0);
+    background: rgb(154, 164, 248);
     border-bottom: 5px solid rgb(10, 10, 10);
     border-left: 5px solid rgb(10, 10, 10);
     border-right: 5px solid rgb(10, 10, 10);
@@ -286,14 +287,18 @@ button {
         rgba(0, 0, 0, 0.25)
     );
     backdrop-filter: blur(8px);
+    box-sizing: border-box;
     border-radius: 1rem;
     position: absolute;
     width: 200px;
     min-height: 200px;
+    max-height: 60vh;
     top: 100px;
     right: 100px;
     padding: 0;
+    padding-bottom: 20px;
     color: white;
+    overflow-y: auto;
 }
 
 #shop-filter > h5 {
