--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ html {
 #body {
     margin: 0;
     padding: 0;
-    width: 100vw;
     height: 100%;
     min-height: 100%;
     box-sizing: border-box;
@@ -47,6 +46,7 @@ html {
 
 .header {
     width: 100vw;
+    max-width: 1024px;
 }
 
 .movableheader {
@@ -62,6 +62,7 @@ html {
     display: flex;
     justify-content: space-around;
     margin: 0;
+    cursor: pointer;
 }
 
 #nav-menu h1 {
@@ -82,6 +83,7 @@ html {
 
 main {
     width: 90%;
+    max-width: 1024px;
     height: 90%;
     margin: 0.5rem;
 }
@@ -229,7 +231,7 @@ main {
 
 .single-item {
     display: grid;
-    grid-template-columns: 4fr 1fr 1fr 1fr;
+    grid-template-columns: 60% 10% 20% 10%;
     margin: 0.5rem;
     border-bottom: 1px solid black;
     font-size: 1rem;
@@ -272,12 +274,20 @@ button {
 #items-list-head {
     width: 100%;
     display: grid;
-    grid-template-columns: 4fr 1fr 1fr 1fr;
+    grid-template-columns: 60% 10% 20% 10%;
     text-align: center;
     font-weight: 700;
     margin-top: 0.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0;
     border-bottom: 1px solid black;
+}
+
+#shopFilterBtn {
+    cursor: pointer;
+}
+
+.movableheader {
+    cursor: move;
 }
 
 #shop-filter {
@@ -331,6 +341,7 @@ button {
 
 #language img {
     scale: 70%;
+    cursor: pointer;
 }
 
 #language img:hover {
